--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p I am very addicted to movies and coffee #{title}
+  p I am very addicted to movies and coffee 
